# TierList

./: .gitignore  CMakeLists.txt
getPicture/screen_to_text/: screen_to_text.py
src/: CMakeLists.txt
src/FreeContent/: CMakeLists.txt  FreeContent.cpp  FreeContent.h
src/app/: CMakeLists.txt  main.cpp
src/mainWindow/: CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  Constants.h  MainWindow.cpp  MainWindow.h  mainwindow.cpp  mainwindow.h
src/typeLabel/: CMakeLists.txt  TypeLabel.cpp  TypeLabel.h
